<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:background="@drawable/card_shape">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_web"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/spiderlogo5"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/tv_webname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="Spider"
            style="@style/texttitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="spider.com"
            style="@style/textsubtile"
            app:layout_constraintStart_toStartOf="@+id/tv_webname"
            app:layout_constraintTop_toBottomOf="@id/tv_webname" />

        <TextView
            android:id="@+id/tv_desciption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            style="@style/textsubtile"
            android:text="description"
            app:layout_constraintStart_toStartOf="@+id/tv_webname"
            app:layout_constraintTop_toBottomOf="@id/tv_url" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintBottom_toBottomOf="@id/tv_desciption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_webname">

            <ImageView
                android:id="@+id/drodow"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_arrow_right_24" />

            <ImageView
                android:id="@+id/Eddi"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_more_vert_24"
                app:tint="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/lay1"
        app:layout_constraintTop_toBottomOf="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/mv_crickate"
            android:src="@drawable/cricket"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
        <ImageView
            android:id="@+id/mv_football"
            android:src="@drawable/ball"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="25dp"
            android:layout_height="25dp"/>

        <ImageView
            android:id="@+id/mv_tenis"
            android:src="@drawable/badminton"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
        <ImageView
            android:id="@+id/mv_hourse"
            android:src="@drawable/horse"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
        <ImageView
            android:id="@+id/mv_casino"
            android:src="@drawable/casinochips"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
        <ImageView
            android:id="@+id/mv_cads"
            android:src="@drawable/playingcards"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
        <ImageView
            android:id="@+id/mv_politics"
            android:src="@drawable/goverment"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/cont_lay"
        android:visibility="gone"
        android:background="@drawable/card1_shape"
        android:padding="10dp"
        tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/ct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:drawableTint="@color/white"
                android:drawablePadding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableLeft="@drawable/cricket"
                style="@style/textsubtile"
                android:text="@string/Cricket"/>
            <TextView
                android:id="@+id/tv_cricket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ct"
                android:text="100"
                style="@style/textsubtile"/>
            <TextView
                android:id="@+id/ft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ct"
                android:drawableLeft="@drawable/ball"
                style="@style/textsubtile"
                android:text="@string/Football"/>
            <TextView
                android:id="@+id/tv_football"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ft"
                android:text="100"
                style="@style/textsubtile" />
            <TextView
                android:id="@+id/ts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ft"
                android:drawableLeft="@drawable/badminton"
                style="@style/textsubtile"
                android:text="@string/Tennis"/>
            <TextView
                android:id="@+id/tv_tenis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ts"
                android:text="100"
                style="@style/textsubtile" />
            <TextView
                android:id="@+id/hs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:drawablePadding="5dp"
                android:drawableTint="@color/white"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ts"
                android:drawableLeft="@drawable/horse"
                style="@style/textsubtile"
                android:text="@string/HorseRacing"/>
            <TextView
                android:id="@+id/tv_hourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/hs"
                android:text="100"
                style="@style/textsubtile" />
            <TextView
                android:id="@+id/cd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hs"
                android:drawableLeft="@drawable/playingcards"
                style="@style/textsubtile"
                android:text="@string/Cards"/>
            <TextView
                android:id="@+id/tv_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cd"
                android:text="100"
                style="@style/textsubtile" />
            <TextView
                android:id="@+id/lc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cd"
                android:drawableLeft="@drawable/casinochips"
                style="@style/textsubtile"
                android:text="@string/Livcasino"/>
            <TextView
                android:id="@+id/tv_livecasio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lc"
                android:text="100"
                style="@style/textsubtile" />
            <TextView
                android:id="@+id/ps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:drawableTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lc"
                android:drawableLeft="@drawable/goverment"
                style="@style/textsubtile"
                android:text="@string/Politics"/>
            <TextView
                android:id="@+id/tv_ps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ps"
                android:text="100"
                style="@style/textsubtile" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
         android:layout_width="match_parent"
         android:layout_height="10dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/cont_lay"
         tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>