<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@color/black"
    tools:context=".Website_list">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="5dp"
        app:cardBackgroundColor="@color/d_black"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/d_black"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/tv_webname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Spider"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:fontFamily="@font/gtwalsheimpro_regular"/>
                <TextView
                    android:id="@+id/tv_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="spider.com"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:fontFamily="@font/gtwalsheimpro_regular"/>
                <TextView
                    android:id="@+id/tv_desciption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="description"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:fontFamily="@font/gtwalsheimpro_regular"/>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/userr"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        app:civ_border_color="@color/yellow"
                        app:civ_border_width="2dp" />
                    <View
                        android:layout_width="220dp"
                        android:layout_height="0.1dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:background="@color/bg"/>
                    <ImageView
                        android:id="@+id/drodow"
                        android:src="@drawable/ic_baseline_chevron_right_24"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>
                    <ImageView
                        android:id="@+id/Eddi"
                        android:src="@drawable/ic_baseline_more_vert_24"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        app:tint="@color/red" />

                </LinearLayout>
-->


                <LinearLayout
                    android:id="@+id/lay1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="7"
                   android:visibility="gone"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/mv_crickate"
                        android:src="@drawable/cricket"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>
                    <ImageView
                        android:id="@+id/mv_football"
                        android:src="@drawable/ball"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>

                    <ImageView
                        android:id="@+id/mv_tenis"
                        android:src="@drawable/badminton"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>
                    <ImageView
                        android:id="@+id/mv_hourse"
                        android:src="@drawable/horse"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>
                    <ImageView
                        android:id="@+id/mv_casino"
                        android:src="@drawable/casinochips"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>
                    <ImageView
                        android:id="@+id/mv_cads"
                        android:src="@drawable/playingcards"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>
                    <ImageView
                        android:id="@+id/mv_politics"
                        android:src="@drawable/goverment"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"/>


                </LinearLayout>




                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cont_lay"
                    android:visibility="gone"
                    android:background="@color/black"
                    android:padding="10dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/ct"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:visibility="gone"
                            android:drawablePadding="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:drawableLeft="@drawable/cricket"
                            android:textColor="@color/white"
                            android:text="@string/Cricket"/>
                        <TextView
                            android:id="@+id/tv_cricket"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginRight="10dp"
                            android:visibility="gone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/ct"
                            android:text="100"
                            android:textColor="@color/red" />
                        <TextView
                            android:id="@+id/ft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:visibility="gone"
                            android:layout_marginTop="5dp"
                            android:drawablePadding="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ct"
                            android:drawableLeft="@drawable/ball"
                            android:textColor="@color/white"
                            android:text="@string/Football"/>
                        <TextView
                            android:id="@+id/tv_football"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginRight="10dp"
                            android:visibility="gone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/ft"
                            android:text="100"
                            android:textColor="@color/red" />
                        <TextView
                            android:id="@+id/ts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:drawablePadding="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ft"
                            android:drawableLeft="@drawable/badminton"
                            android:textColor="@color/white"
                            android:text="@string/Tennis"/>
                        <TextView
                            android:id="@+id/tv_tenis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_marginRight="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/ts"
                            android:text="100"
                            android:textColor="@color/red" />
                        <TextView
                            android:id="@+id/hs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:visibility="gone"
                            android:drawablePadding="5dp"
                            android:layout_marginTop="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ts"
                            android:drawableLeft="@drawable/horse"
                            android:textColor="@color/white"
                            android:text="@string/HorseRacing"/>
                        <TextView
                            android:id="@+id/tv_hourse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_marginRight="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/hs"
                            android:text="100"
                            android:textColor="@color/red" />
                        <TextView
                            android:id="@+id/cd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:drawablePadding="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/hs"
                            android:drawableLeft="@drawable/playingcards"
                            android:textColor="@color/white"
                            android:text="@string/Cards"/>
                        <TextView
                            android:id="@+id/tv_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_gravity="right"
                            android:layout_marginRight="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/cd"
                            android:text="100"
                            android:textColor="@color/red" />
                        <TextView
                            android:id="@+id/lc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:drawablePadding="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/cd"
                            android:drawableLeft="@drawable/casinochips"
                            android:textColor="@color/white"
                            android:text="@string/Livcasino"/>
                        <TextView
                            android:id="@+id/tv_livecasio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_gravity="right"
                            android:layout_marginRight="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/lc"
                            android:text="100"
                            android:textColor="@color/red" />
                        <TextView
                            android:id="@+id/ps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:drawablePadding="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/lc"
                            android:drawableLeft="@drawable/goverment"
                            android:textColor="@color/white"
                            android:text="@string/Politics"/>
                        <TextView
                            android:id="@+id/tv_ps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_marginRight="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/ps"
                            android:text="100"
                            android:textColor="@color/red" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
            <ImageView
                android:id="@+id/drodow"
                android:src="@drawable/ic_baseline_chevron_right_24"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <ImageView
                android:id="@+id/Eddi"
                android:src="@drawable/ic_baseline_more_vert_24"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_width="30dp"
                android:layout_height="25dp"
                app:tint="@color/red" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>